<resources>
    <string name="app_name">住家饭</string>
    <string name="username_text">用户名</string>
    <string name="password_text">密码</string>
    <string name="confirm_password_text">确认密码</string>
    <string name="register_text"><u>注册帐号</u></string>
    <string name="forget_password_text"><u>忘记密码</u></string>
    <string name="login_text">登录</string>
    <string name="logout_text">退出</string>
    <string name="nihao_text">你好:</string>
    <string name="comment_text">评论</string>
    <string name="menu_text">菜单</string>
    <string name="create_text">创建</string>
    <string name="home_text">主页</string>
    <string name="friendship_text">收藏</string>
    <string name="personal_text">我</string>
    <string name="enter_title_hint">菜名</string>
    <string name="enter_description_text">描述</string>
    <string name="preview_text">预览图:</string>
    <string name="upload_image_text">上传图片</string>
    <string name="from_camera_text">相机拍照</string>e
    <string name="from_gallery_text">图库上传</string>
    <string name="username_or_password_empty_text">用户名或密码不能为空!</string>
    <string name="title_activity_dish_detail">菜单详情</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">住家饭</string>
    <string name="title_activity_get_image">图片上传</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_logout">退出</string>
    <string name="title_activity_register">注册</string>
    <string name="text_add_cart">加入购物车</string>
    <string name="user_text">用户</string>
    <string name="dish_tang">靓汤</string>
    <string name="dish_tiandian">甜点</string>
    <string name="dish_yinliao">饮料</string>
    <string name="dish_xiaochao">小炒</string>
    <string name="dish_shucai">蔬菜</string>
    <string name="dish_zhou">粥</string>
    <string name="dish_mifan">米饭</string>
    <string name="dish_yuchi">鱼翅</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="login_success_text">登录成功!</string>
    <string name="login_ing_text">正在登录..</string>
    <string name="register_succcess_text">注册成功</string>
    <string name="register_ing_text">注册中...</string>
    <string name="no_more_items">没有数据了</string>
    <string name="refresh_data_number">刷新数据 %d 条</string>
    <string name="network_error_tip">网络异常,请重新刷新</string>
    <string name="loading_data_text">正在刷新数据...</string>
    <string name="or_text">或</string>
    <string name="to_text">到</string>
    <string name="share_text">(份)</string>
    <string name="save_success_tip">保存成功!</string>
    <string name="save_fail_tip">保存失败!</string>
    <string name="search_text">查找</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_desc">zhujiafan</string>
    <string name="ordering_time_text">订餐时间:</string>
    <string name="repast_way_text">就餐方式:</string>
    <string name="at_home_text">上门</string>
    <string name="delivery_text">外带</string>
    <string name="dish_share_range_text">份额范围:</string>
    <string name="click_to_login_text">请点击登录</string>
    <string name="my_favorites_text">我的收藏</string>
    <string name="my_cart_text">我的购物车</string>
    <string name="my_orders_text">我的订单</string>
    <string name="my_comments_text">我的评价</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_activity_orders">OrdersActivity</string>
    <string name="title_activity_comments">CommentsActivity</string>

    <string name="cart_productName_text">商品名</string>
    <string name="cart_price_text">单价</string>
    <string name="cart_quantity_text">数量</string>
    <string name="cart_delete_text">删除</string>
    <string name="cart_total_all__text">商品总额:</string>
    <string name="cart_checkout_text">结算</string>
    <string name="devoloping_text">开发中...</string>
    <string name="add_to_cart_success_tip">成功加入购物车!</string>
    <string name="add_to_cart_fail_tip">加入购物车失败!</string>

    <!--手机号注册-->
    <string name="enter_phone_num_header_tip">1 输入手机号</string>
    <string name="enter_verify_code_tip">2 输入验证码</string>
    <string name="setting_password_tip">3 设置密码</string>
    <string name="enter_phone_num_hint">请输入手机号</string>
    <string name="send_verify_code_text">发送验证码</string>
    <string name="enter_verify_code_hint">请输入验证码</string>
    <string name="verify_text">验证</string>
    <string name="setting_password_hint">请输入密码</string>
    <string name="complete_text">完成</string>

    <!--菜单创建-->
    <string name="dish_category_not_select_tip">请选择一个目录</string>
    <string name="valid_share_range_tip" formatted="false">份额范围为 %d 到 %d</string>
    <string name="address_not_null_tip">地址不能为空</string>
</resources>
