<RelativeLayout
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="#26AE90"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:background="@android:color/white"
        android:hint="@string/username_text"
        android:id="@+id/et_username"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:layout_below="@+id/et_username"
        android:background="@android:color/white"
        android:hint="@string/password_text"
        android:id="@+id/et_password"/>
    <Button
        android:textSize="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_password"
        android:text="@string/login_text"
        android:background="@drawable/white_button_background"
        android:textColor="#26AE90"
        android:id="@+id/btn_login"/>
    <LinearLayout
        android:layout_below="@id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textSize="18sp"
            android:clickable="true"
            android:textColor="@drawable/white_text_foreground"
            android:id="@+id/tv_register"
            />
        <TextView
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_text"
            android:textSize="18sp"
            android:clickable="true"
            android:textColor="@drawable/white_text_foreground"
            android:id="@+id/tv_forget_password"
            />
        </LinearLayout>
</RelativeLayout>