<RelativeLayout
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="#26AE90"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:background="@android:color/white"
        android:hint="@string/username_text"
        android:id="@+id/et_username"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:layout_below="@id/et_username"
        android:background="@android:color/white"
        android:hint="@string/password_text"
        android:id="@+id/et_password"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:layout_below="@id/et_password"
        android:background="@android:color/white"
        android:hint="@string/confirm_password_text"
        android:id="@+id/et_confirm_password"
        />

    <Button
        android:textSize="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_confirm_password"
        android:text="@string/register_text"
        android:background="@drawable/white_button_background"
        android:textColor="#26AE90"
        android:id="@+id/btn_register"/>
</RelativeLayout>
