<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="zhujiafanx.activity.HomeActivity">

    <include android:id="@+id/main_toolbar"
        layout="@layout/main_toolbar"/>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frl_homeFragment"
        android:layout_weight="1"
        >
        </FrameLayout>
    <LinearLayout
        android:layout_below="@id/frl_homeFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ColorPrimary"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="@dimen/radioButton_size"
                android:layout_height="@dimen/radioButton_size"
                android:layout_weight="1"
                android:text="@string/menu_text"
                android:textColor="@drawable/radio_button_foreground"
                android:button="@null"
                android:textSize="18dp"
                android:gravity="center"
                android:id="@+id/rb_menu"/>
            <RadioButton
                android:layout_width="@dimen/radioButton_size"
                android:layout_height="@dimen/radioButton_size"
                android:layout_weight="1"
                android:text="@string/create_text"
                android:textColor="@drawable/radio_button_foreground"
                android:button="@null"
                android:textSize="18dp"
                android:gravity="center"
                android:id="@+id/rb_create"/>
            <RadioButton
                android:layout_width="@dimen/radioButton_size"
                android:layout_height="@dimen/radioButton_size"
                android:layout_weight="1"
                android:text="@string/home_text"
                android:textColor="@drawable/radio_button_foreground"
                android:button="@null"
                android:textSize="18dp"
                android:gravity="center"
                android:id="@+id/rb_favorite"/>
            <RadioButton
                android:layout_width="@dimen/radioButton_size"
                android:layout_height="@dimen/radioButton_size"
                android:layout_weight="1"
                android:text="@string/friendship_text"
                android:textColor="@drawable/radio_button_foreground"
                android:button="@null"
                android:textSize="18dp"
                android:gravity="center"
                android:id="@+id/rb_friendship"/>
            <RadioButton
                android:layout_width="@dimen/radioButton_size"
                android:layout_height="@dimen/radioButton_size"
                android:layout_weight="1"
                android:text="@string/personal_text"
                android:textColor="@drawable/radio_button_foreground"
                android:button="@null"
                android:textSize="18dp"
                android:gravity="center"
                android:id="@+id/rb_personal"/>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
